           Use STRUCT_PRINT to print all ASCII and HTML files.
           Use APO_CHECKLIMITS() to check limits of tabulated values
           and color-code them in the HTML files.
PLATEMERGE: Use MWRFITS_CHUNKS to allow us to write bigger files
           (approximately up to your memory size).
           Add PROGNAME,SPECPRIMARY to ASCII output.
ZPLOT: Change "brg" names to "lrg".

opLimits.par: Use the SKYPERSEC limit for either science or smear exposures.
           Add limits for use by the PLATELIST procedure.
spPlateList.par: Update to data through MJD 52413 (19 May 2002).
           Add PLATEQUALITY,QUALCOMMENTS to Yanny structure.
           Remove the following (bad) plates from public data releases:
             266/51602 (Internal LEDs), 360/51780 (b1 CCD warmed up).

In idlutils:

MWRFITS_CHUNKS: New proc to write a FITS binary table in chunks
           (used by PLATEMERGE).
STRUCT_PRINT: Add options TARRAY, /NO_HEAD, /HTML, FDIDIT, DDIGIT, ALIAS.
STRUCT_TRIMTAGS: New procedure.

evilinstall: One line change to do one more check for proper sdsstools.

-------------------------------------------------------------------------------
v4_9_11 (May 31, 2002 idlspec2d+idlutils) running on IDL 5.3 - 5.5
Built against specflat v1_4.

Fix "make install" bugs and crash condition for P-1D.

LINEBACKFIT: Fix crash condition just introduced (testing for return
           status from MPFITFUN).
LOGSHEET: Include UT time, NAME, CARTID, and QUALITY in outputs.

doc/Makefile: Remove invalid copy line.
etc/Makefile: Change copy of "*" to "*.*" so the "make install" does
           not crash on IRIX+6 platforms.
pro/Makefile: Remove invalid copy line.
pro/inspect/Makefile: Added this makefile.
pro/science/qso/Makefile: Fix Makefile.
templates/Makefile: Change copy of "*" to "*.*" so the "make install" does
           not crash on IRIX+6 platforms.
spectroSOS.html: More comments on the QUALITY keyword.

In idlutils:
